# bmake

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
cmake/: landlock.py  rules.cmake  sandbox_wrapper.py
src/: CMakeLists.txt
src/lib/: CMakeLists.txt  add.cc  add.h  mul.cc  mul.h  slow_mul.cc  slow_mul.h
tools/sandbox/: CMakeLists.txt  process_wrapper.cc
